Finished pages refactoring, added ancillary scripts.

--- a/src/index.html
+++ b/src/index.html
@@ -30,22 +30,22 @@
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
+            <a class="header__menu-item-link" href="./pages/about/about.html">
               ABOUT
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
+            <a class="header__menu-item-link" href="./pages/portfolio/portfolio.html">
               PORTFOLIO
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
+            <a class="header__menu-item-link" href="./pages/news/news.html">
               NEWS
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="#">
+            <a class="header__menu-item-link" href="./pages/contact/contact.html">
               CONTACT
             </a>
           </li>
