--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,14 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Benhome: about</title>
 
-  <link rel="stylesheet" href="/libs/reset/reset.css">
-  <link rel="stylesheet" href="../../fonts/stylesheet.css">
-  <link rel="stylesheet" href="/pages/about/css/about.css">
+  <!-- <link rel="stylesheet" href="/libs/reset/reset.css"> -->
+  <!-- <link rel="stylesheet" href="../../fonts/stylesheet.css"> -->
 
-  <script src="../../common-blocks/btn-to-top/btn-to-top.js" defer></script>
-  <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
-  <script src="../../common-blocks//services/services.js" defer></script>
-  <script src="/pages/about/about.js" defer></script>
+  <!-- <script src="../../common-blocks/btn-to-top/btn-to-top.js" defer></script>
+    <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
+    <script src="../../common-blocks//services/services.js" defer></script> -->
+
+  <link rel="stylesheet" href="./about.scss">
+
+  <script src="./about.js" defer></script>
 </head>
 
 <body>
@@ -26,7 +28,7 @@
       <button class="header__mobile-btn--open">
       </button>
       <a class="header__logo" href="#">
-        <img class="header__logo-benhome" src="../../images/general-imgs/logo-black.png" alt="logo-white">
+        <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -97,7 +99,7 @@
       <div class="idea__upper-right">
         <div class="idea__video-container">
 
-          <video class="idea__video" src="/videos/about/modern-house.mp4" poster="../../images/main.jpg">
+          <video class="idea__video" src="../../videos/about/modern-house.mp4" poster="../../images/main.jpg">
             Your browser can't play the video. Please, change browser.
           </video>
 
@@ -139,7 +141,7 @@
 
   </section>
   <section class="services">
-    <script src="/blocks/services/services.js" defer></script>
+    <!-- <script src="/blocks/services/services.js" defer></script> -->
     <div class="services__left">
       <h3 class="services__title">
         SERVICES
@@ -289,7 +291,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about-page/person1.png" alt="person1">
+            <img class="team__person-photo-img" src="../../images/pages/about/person1.png" alt="person1">
           </div>
         </div>
         <div class="team__person team__person--second">
@@ -317,7 +319,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about-page/person6.png" alt="person6">
+            <img class="team__person-photo-img" src="../../images/pages/about/person6.png" alt="person6">
           </div>
         </div>
       </div>
@@ -349,7 +351,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about-page/person3.png" alt="person3">
+            <img class="team__person-photo-img" src="../../images/pages/about/person3.png" alt="person3">
           </div>
         </div>
         <div class="team__person team__person--fourth">
@@ -377,7 +379,7 @@
             </ul>
           </div>
           <div class="team__person-photo">
-            <img class="team__person-photo-img" src="../../images/pages/about-page/person4.png" alt="person4">
+            <img class="team__person-photo-img" src="../../images/pages/about/person4.png" alt="person4">
           </div>
         </div>
       </div>
@@ -399,7 +401,7 @@
 
   <footer class="footer">
     <a href="#" class="footer__logo">
-      <img class="footer__logo-link" src="../../images/general-imgs/logo-black.png" alt="logo">
+      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
 
     <p class="footer__rights">
@@ -478,15 +480,15 @@
 
     <ul class="socials">
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--first">
+        <a class="socials__link socials__link--first" href="#" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--second">
+        <a class="socials__link socials__link--second" href="#" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--third">
+        <a class="socials__link socials__link--third" href="#" target="_blank" rel="noopener">
         </a>
       </li>
     </ul>
