--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,26 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Benhome: contact</title>
 
-  <link rel="stylesheet" href="../../libs/reset/reset.css">
-  <link rel="stylesheet" href="../../fonts/stylesheet.css">
-  <link rel="stylesheet" href="css/contact.css">
-
-  <!-- <script src="./contact.js" defer></script> -->
-  <script src="../../common-blocks/header-upper/header-upper.js" defer></script>
-  <script src="../../common-blocks/btn-to-top/btn-to-top.js" defer></script>
+  <link rel="stylesheet" href="./contact.scss">
   <script src="./contact.js" defer></script>
 </head>
 
 <body>
-
+  <div class="btn-to-top">
+  </div>
   <header class="header">
-    <div class="btn-to-top">
-    </div>
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
       <a class="header__logo" href="#">
-        <img class="header__logo-benhome" src="../../images/general-imgs/logo-black.png" alt="logo-white">
+        <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
         <button class="header__mobile-btn--close">
@@ -159,7 +152,7 @@
   </section>
   <footer class="footer">
     <a href="#" class="footer__logo">
-      <img class="footer__logo-link" src="../../images/general-imgs/logo-black.png" alt="logo">
+      <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
     <p class="footer__rights">
       © Sentro 2021 <br>
@@ -232,15 +225,15 @@
     </ul>
     <ul class="socials">
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--first">
+        <a class="socials__link socials__link--first" href="#" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--second">
+        <a class="socials__link socials__link--second" href="#" target="_blank" rel="noopener">
         </a>
       </li>
       <li class="socials__item">
-        <a href="#" class="socials__link socials__link--third">
+        <a class="socials__link socials__link--third" href="#" target="_blank" rel="noopener">
         </a>
       </li>
     </ul>
